[package]
name = "driftwood_oauth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
tokio = { version = "1.40.0", features = ["full"] }
oauth2 = "4.3"
dotenv = "0.15"
env_logger = "0.11.5"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
serde_json = "1.0.127"
rsa = { version = "0.9.6", features = ["pem"] }